# BFRL

./: .gitignore  README.md  constants.py  main.py  pyproject.toml  requirements.txt
bfrl/: actors.py  ai.py  assets.py  camera.py  constants.py  cursor.py  data.py  death.py  draw.py  game.py  game_globals.py  game_loop.py  generator.py  globals.py  magic.py  maps.py  menu.py  panels.py  startup.py  structs.py
data/: assets.yaml  preferences  savegame  scenario.yaml
data/name_generator/: celtic.cfg
